src/test/fail/assign_parameter_to_wrong_type_fail.egern
func square(n: boolean): void {
    n = 4
}

square(true)
